# si-lang

./: .clang-format  README.md  meson.build
.cache/clangd/index/: aloc.h.35F54EACAC985DE4.idx  file.c.D0177B7B0F5530A4.idx  file.h.BED1A337811AEB61.idx  main.c.51DFB8BAB8555C9B.idx
example/: numbers.si
inc/: aloc.h  const.h  file.h  lexer.h  list.h  log.h  merger.h  token.h
src/: aloc.c  file.c  lexer.c  list.c  log.c  main.c  merger.c  parser.c  token.c
